input placeholder color fix and increasing hard to read font weight

--- a/src/components/Search.module.scss
+++ b/src/components/Search.module.scss
@@ -17,6 +17,12 @@
     color: $secondary-dark-color;
     background-color: $accent-dark-color;
   }
+  &::placeholder {
+    color: $secondary-light-color;
+    @media (prefers-color-scheme: dark) {
+      color: $secondary-dark-color;
+    }
+  }
 
   &:focus {
     // sets focus styles while preventing reflow/shift
