--- a/src/components/content/Content.module.scss
+++ b/src/components/content/Content.module.scss
@@ -20,7 +20,7 @@
   margin-bottom: 3rem;
   font-size: 1.2rem;
   font-family: $sans-serif;
-  font-variation-settings: 'wght' 100;
+  font-variation-settings: 'wght' 300;
   border-top: 0.1rem solid;
   border-bottom: 0.1rem solid;
 
